--- a/local/.htaccess
+++ b/local/.htaccess
@@ -1,4 +1,5 @@
 AddDefaultCharset utf-8
+Options -Indexes
 
 RewriteEngine on
 RewriteBase /
@@ -7,3 +8,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 RewriteRule ^(.*)$ index.php [L]
+
+php_value display_errors 1
+php_value display_startup_errors 1
+php_value error_reporting E_ALL
