--- a/local/.htaccess
+++ b/local/.htaccess
@@ -9,6 +9,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 RewriteRule ^(.*)$ index.php [L]
 
+//TODO выпилить этот блок
 php_value display_errors 1
 php_value display_startup_errors 1
 php_value error_reporting E_ALL
